# esp32-c3-buddy-like-board-rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: blink.rs  counter.rs  esp-now-no-display.rs  esp-now-receiver.rs  interupt-counter.rs  rmt_sync.rs  sk6812_rgbw_embassy.rs  snow.rs  wifi.rs
src/: main.rs
