[package]
name = "esp32-c3-buddy-like"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = ["esp32c3", "panic-handler", "exception-handler","println"] }
hal = { version = "0.21.1", package = "esp-hal", features=["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
embedded-graphics = "0.8.1"
sh1106 = "0.5.0"
