[package]
name = "esp32-c3-buddy-like"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = ["esp32c3", "panic-handler", "exception-handler","println"] }
hal = { version = "0.21.1", package = "esp-hal", features=["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
embedded-graphics = "0.8.1"
sh1106 = "0.5.0"
esp-alloc = "0.5.0"
esp-wifi = {version = "0.10.1", features = ["esp32c3","wifi","esp-now", "utils", "tcp", "smoltcp", "dhcpv4"]}
smoltcp = { version = "0.11.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
heapless = { version = "0.8.0", default-features = false }
critical-section = "1.2.0"
